# vgi-google

./: CLAUDE.md  Makefile  README.md  conftest.py  google_worker.py  pyproject.toml  serve.py
.github/workflows/: ci.yml
ci/: README.md  preprocess-require.awk  run-integration.sh
scripts/: run_sql_e2e.py
test/sql/: google.test
tests/: harness.py  mock_google.py  test_adapters.py  test_auth.py  test_discovery.py  test_live_smoke.py  test_mock_e2e.py
vgi_google/: __init__.py  auth.py  client.py  discovery.py  meta.py  schema_utils.py  tables.py
vgi_google/adapters/: __init__.py  base.py  calendar.py  drive.py  sheets.py  youtube.py
