[project]
name = "vgi-google"
version = "0.1.0"
description = "Query Google APIs (Sheets / Drive / Calendar / YouTube + a generic hatch) from SQL as VGI DuckDB table functions"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
keywords = [
    "vgi",
    "duckdb",
    "google",
    "google-sheets",
    "google-drive",
    "google-calendar",
    "youtube",
    "discovery",
    "api",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
]
dependencies = [
    "vgi-python>=0.8.4",
    "google-api-python-client>=2.100",
    "google-auth>=2.20",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "pydoclint>=0.5",
]
# HTTP transport: the worker can serve over HTTP (`google_worker.py --http`, and
# the HTTP entry `serve.py`) in addition to stdio/AF_UNIX. That path needs
# vgi-python's `http` extra (waitress). CI's http transport leg installs this via
# `uv sync --extra http`.
http = [
    "vgi-python[http]>=0.8.4",
]

[project.urls]
Homepage = "https://query.farm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_google"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
# Docstrings (D) are enforced on the worker package/scripts (product code), not tests.
"tests/**" = ["D"]
# The PEP 723 inline-script headers wrap dependency pins that should stay one-per-line.
"google_worker.py" = ["E501"]
"serve.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
# Docstring consistency gate (complements ruff's D rules: ruff checks docstring
# shape, pydoclint checks documented args/returns/attrs match the code).
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Untyped third-party libraries (no stubs published).
module = ["googleapiclient.*", "google.auth.*", "google.oauth2.*", "httplib2.*"]
ignore_missing_imports = true
